--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Daniil Bombenkov <danixoon@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "watch": "concurrently 'yarn backend:watch' 'cd client && yarn watch'",
     "backend:watch": "TS_NODE_FILES=true nodemon --exec \"node --inspect -r ts-node/register -r tsconfig-paths/register src/index.ts\"",
     "backend:generate": "TS_NODE_FILES=true graphql-codegen",
     "backend:test": "jest",
@@ -14,47 +15,52 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
-    "@graphql-codegen/cli": "^1.19.1",
-    "@graphql-codegen/typescript": "^1.17.11",
-    "@graphql-codegen/typescript-graphql-request": "^2.0.3",
-    "@graphql-codegen/typescript-operations": "^1.17.12",
-    "@graphql-codegen/typescript-react-query": "^0.1.1",
-    "@graphql-codegen/typescript-resolvers": "^1.17.10",
     "@types/assert": "^1.5.2",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.7",
-    "babel-jest": "^26.6.3",
-    "concurrently": "^5.2.0",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.7",
+    "babel-jest": "^27.3.1",
+    "concurrently": "^6.4.0",
     "cross-env": "^7.0.2",
-    "jest": "^26.6.3",
+    "jest": "^27.3.1",
     "kill-port": "^1.6.1",
     "nodemon": "^2.0.6",
-    "ts-node": "^9.0.0",
+    "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.5.2"
   },
   "dependencies": {
-    "@graphql-codegen/import-types-preset": "^1.18.0",
-    "@graphql-codegen/typescript-mongodb": "^1.17.8",
+    "@graphql-codegen/cli": "^2.3.0",
+    "@graphql-codegen/import-types-preset": "^2.1.7",
+    "@graphql-codegen/typescript": "^2.4.0",
+    "@graphql-codegen/typescript-graphql-request": "^4.3.0",
+    "@graphql-codegen/typescript-mongodb": "^2.2.0",
+    "@graphql-codegen/typescript-operations": "^2.2.0",
+    "@graphql-codegen/typescript-react-query": "^3.2.0",
+    "@graphql-codegen/typescript-resolvers": "^2.4.1",
+    "@graphql-tools/graphql-file-loader": "^7.3.3",
+    "@graphql-tools/load": "^7.4.1",
+    "@graphql-tools/merge": "^8.2.1",
+    "@graphql-tools/schema": "^8.3.1",
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.6",
     "@types/express-graphql": "^0.9.0",
     "@types/mongoose": "^5.10.0",
-    "@types/murmurhash": "^0.0.1",
+    "@types/murmurhash": "^2.0.0",
     "@types/p-queue": "^3.2.1",
-    "@types/uuid": "^8.3.0",
+    "@types/uuid": "^8.3.3",
     "body-parser": "^1.19.0",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-graphql": "^0.11.0",
-    "graphql": "^15.4.0",
-    "graphql-tools": "^7.0.1",
-    "mongodb": "^3.6.3",
-    "mongoose": "^5.10.14",
+    "express-graphql": "^0.12.0",
+    "graphql": "^16.0.1",
+    "graphql-tag": "^2.12.6",
+    "graphql-tools": "^8.2.0",
+    "mongodb": "^4.2.0",
+    "mongoose": "^6.0.13",
     "murmurhash": "^2.0.0",
-    "p-queue": "^6.6.2",
+    "p-queue": "^7.1.0",
     "ttypescript": "^1.5.12",
-    "typescript-transform-paths": "^2.0.3",
+    "typescript-transform-paths": "^3.3.1",
     "uuid": "^8.3.1"
   }
 }
