--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^16.0.1",
+    "graphql-constraint-directive": "^2.1.1",
     "graphql-tag": "^2.12.6",
     "mongodb": "^4.2.0",
     "mongoose": "^6.0.13",
