--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "watch": "concurrently 'yarn backend:watch' 'cd client && yarn watch'",
     "backend:watch": "TS_NODE_FILES=true nodemon --exec \"node --inspect -r ts-node/register -r tsconfig-paths/register src/index.ts\"",
     "backend:generate": "TS_NODE_FILES=true graphql-codegen",
+    "backend:build": "yarn && rm -rf ./build && NODE_ENV=production ttsc && cp ./src/graphql/schemas/*.gql ./build/graphql/schemas/",
     "backend:test": "jest",
+    "start": "node ./build/index.js",
+    "build": "yarn && yarn backend:build && cd client && yarn && yarn build",
     "backend:test:debug": "NODE_ENV=development node --inspect -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --forceExit"
   },
   "devDependencies": {
