--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react-feather": "^2.0.9",
     "react-query": "^3.33.1",
     "react-router-dom": "^6.0.2",
-    "uuid": "^8.1.0"
+    "uuid": "^8.1.0",
+    "webpack": "^5.64.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -41,7 +42,6 @@
     "ts-loader": "^9.2.6",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^4.5.2",
-    "webpack": "5.64.1",
     "webpack-bundle-analyzer": "^4.1.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^4.5.0"
