--- a/client/package.json
+++ b/client/package.json
@@ -22,15 +22,7 @@
     "uuid": "^8.1.0",
     "webpack": "^5.64.1",
     "webpack-cli": "^4.2.0",
-    "typescript": "^4.5.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-query": "^1.2.9",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/uuid": "^8.3.3",
+    "typescript": "^4.5.2",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.5.1",
@@ -41,9 +33,17 @@
     "pug": "^3.0.0",
     "pug-loader": "^2.4.0",
     "style-loader": "^3.3.1",
-    "ts-loader": "^9.2.6",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
-    "webpack-bundle-analyzer": "^4.1.0",
-    "webpack-dev-server": "^4.5.0"
+    "webpack-bundle-analyzer": "^4.1.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-query": "^1.2.9",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/uuid": "^8.3.3",
+    "webpack-dev-server": "^4.5.0",
+    "ts-loader": "^9.2.6"
   }
 }
