--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,8 @@
     "pug-loader": "^2.4.0",
     "style-loader": "^3.3.1",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
-    "webpack-bundle-analyzer": "^4.1.0"
+    "webpack-bundle-analyzer": "^4.1.0",
+    "ts-loader": "^9.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -43,7 +44,6 @@
     "@types/react-query": "^1.2.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/uuid": "^8.3.3",
-    "webpack-dev-server": "^4.5.0",
-    "ts-loader": "^9.2.6"
+    "webpack-dev-server": "^4.5.0"
   }
 }
